@@ -30,7 +30,7 @@
     </li><li>
     <b>CC</b> The incoming CC to respond to. In the case of NRPNs this is presented as two hexadecimal 7bit values.
     </li><li>
-    <b>Chan</b> The incoming channel to recognise. The last entry in the menu allows all channels to be effective for this line.
+    <b>Chan</b> A drop-down menu to select the incoming channel to recognise. The last entry allows all channels to be effective for this line.
     </li><li>
     <b>Min</b> The minimum control value to accept as a percentage of the input.
     </li><li>
@@ -45,7 +45,7 @@
     <br><br>
     Note:
     <br>
-    &emsp;You can have multiple lines responding to the same CC/Channel pair but performing different actions.
+    &emsp;You can have up to 400 learned lines, and multiple lines can respond to the same CC/Channel pair but performing completely different actions.
     </p>
     <p>
     (buttons)
