@@ -48,7 +48,7 @@
     <p>
       In the example's first view, directories are at the top of the list with an appropriate icon. A double click on these will select that directory placing it in the <b>Path</b> field and rebuilding the list. You can also manually edit the path field to go to a known route, and on hitting 'Return' the list will be updated.
       <br>
-      When <em>saving</em> files, you can add new directories here. You will get a popup request for confirmation, and then can save the file in the newly created one.
+      When <em>saving</em> files, you can add new directories here. You will get a popup request for confirmation, and then can save the file in the newly created one. This is also true when <em>exporting</em> banks, PadSynth sample sets, etc.
       <br><br>
       The <b>Up</b> button takes you back along the directory tree, or you can simply edit out one or more directory names and hit 'Return'.
       <br><br>
